修改发送和接受的代码

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@ all:ser cli
 ser:Epoll.cpp Epoll.h Common.h DealMessage.h DealMessage.cpp
 	g++ -g -o $@ $^ -std=c++11
 cli:client.c
-	g++ -o $@ $^
+	g++ -o $@ $^ -std=c++11
 .PHONY:clean
 clean:
 	rm -rf ser cli
